# HW-qt7-2

./: .gitignore  CMakeLists.txt  main.cpp
